# vmxvmm_report

./: .gitignore  README.md  references.txt  todo.txt
bsf_benchmark/bsf_bench/: Cargo.toml  foo.csv
bsf_benchmark/bsf_bench/src/: main.rs
distribution/: Cargo.toml  custom_allocator.csv  distribution.csv  no_internal_frag_usage.csv
distribution/src/: main.rs
lib/: .gitignore
lib/allocator/: .~lock.distribution.csv#  Cargo.toml
lib/allocator/src/: main.rs  (+2 more)
lib/bsf_benchmark/bsf_bench/: .~lock.foo.csv#  Cargo.toml  foo.csv
lib/bsf_benchmark/bsf_bench/src/: main.rs
lib/distribution/: Cargo.toml  custom_allocator.csv  no_internal_frag_usage.csv
lib/distribution/src/: main.rs
lib/distribution/src/lib/: Cargo.toml
pres_04_11_2022/: An Operating System Kernel Frame Allocator in Rust.pptx  bsf.drawio  buddy_multi_level_tree.drawio  buddy_multi_level_tree_worst.drawio  mem_overhead.ods
pres_13_10_2022/: An Operating System Kernel Frame Allocator in Rust.pptx  bsf.drawio  buddy_alloc_linked_list.drawio  buddy_multi_level_tree.drawio  linked_list.drawio
pres_14_12_2022/: buddy_multi_level_tree.drawio  planning.md  tree_state.blend
pres_14_12_2022/animation/: Synfig Animation 1.sifz  basis.sifz  binary_tree_anim.sifz  first_animation_alloc_4kb.sifz  list_commands.txt
pres_30_11_2022/: An Operating System Kernel Frame Allocator in Rust.pptx  distribution.ods  new_state.drawio
report/images/: 4Kb_block_tree_simple.drawio  4kb_8kb_16kb_trees.drawio  512_ary.drawio  8kb_16kb_trees.drawio  simple_buddy.drawio  simple_buddy_2bits.drawio  tree_storage.drawio
(+3 files in other folders)
