[package]
name = "distribution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
statrs = "0.16.0"
csv = "1.1"
rand = "0.8.5"
indicatif="0.17.2"
image="0.24.5"

[dependencies.allocator]
path="src/lib"
