[package]
name = "bsf_bench"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3

[dev-dependencies]
criterion = "0.3"
pprof = { version = "0.4.2", features = ["flamegraph", "criterion"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
